Implementación R10, da un null pointer al hacer el movimiento