@@ -185,39 +185,66 @@ public class PartidaController {
 			System.out.println(cantidad);
 			List<Integer> listaMazos = cartasPartidaService.getMazosIdSorted(partidaId);
 			List<Integer> listaMazosFinales = cartasPartidaService.getMazosFinalIdSorted(partidaId);
-			Tuple3 mazos = cartasPartidaService.moverCartas(mazoOrigen, mazoDestino, cantidad, partidaId);
 			
-			if(cartasPartidaService.findCartasPartidaMazoInicialByPartidaId(partidaId)==null){
-				List<CartasPartida> mazoIni = new ArrayList<>();
-				model.put("mazInicial", mazoIni);
-			}else{
-				List<CartasPartida> mazoIni = cartasPartidaService.findCartasPartidaMazoInicialByPartidaId(partidaId);			
-				model.put("mazInicial", mazoIni);
-			}
-			//Map<Integer, List<CartasPartida>> mazosFinales = cartasPartidaService.moverCartas(mazoOrigen, mazoDestino, cantidad, partidaId).getSecond();
+			if(cartasPartidaService.mazoFinalCompleto(mazoDestino, partidaId) == true){
+				model.put("message", "EL MAZO FINAL YA ESTÁ COMPLETADO");
+			
+				for(int i=0;i<listaMazos.size();i++){
+					List<CartasPartida>cpm =cartasPartidaService.findCartasPartidaByMazoId(listaMazos.get(i));
+					model.put("mazInt"+(i+1),cpm);
+				}
 		
-			model.put("mazInt1",mazos.getFirst().get(listaMazos.get(0)));
-			model.put("mazInt2",mazos.getFirst().get(listaMazos.get(1)));
-			model.put("mazInt3",mazos.getFirst().get(listaMazos.get(2)));
-			model.put("mazInt4",mazos.getFirst().get(listaMazos.get(3)));
-			model.put("mazInt5",mazos.getFirst().get(listaMazos.get(4)));
-			model.put("mazInt6",mazos.getFirst().get(listaMazos.get(5)));
-			model.put("mazInt7",mazos.getFirst().get(listaMazos.get(6)));
+		
+				model.put("mazoFinalCorazones",cartasPartidaService.findCartasPartidaByMazoFinalId(listaMazosFinales.get(0)));
+				model.put("mazoFinalPicas",cartasPartidaService.findCartasPartidaByMazoFinalId(listaMazosFinales.get(1)));	
+				model.put("mazoFinalDiamantes",cartasPartidaService.findCartasPartidaByMazoFinalId(listaMazosFinales.get(2)));
+				model.put("mazoFinalTreboles",cartasPartidaService.findCartasPartidaByMazoFinalId(listaMazosFinales.get(3)));	
+				model.put("partidaId",partidaId);
+				if(cartasPartidaService.findCartasPartidaMazoInicialByPartidaId(partidaId)==null){
+					List<CartasPartida> mazoIni = new ArrayList<>();
+					model.put("mazInicial", mazoIni);
+				}else{
+					List<CartasPartida> mazoIni = cartasPartidaService.findCartasPartidaMazoInicialByPartidaId(partidaId);			
+					model.put("mazInicial", mazoIni);
+				}
+				return TABLERO;
 
-			Collections.sort(mazos.getSecond().get(listaMazosFinales.get(0)), new ComparadorCartasPartidaPorPosCartaMazo());
-			Collections.sort(mazos.getSecond().get(listaMazosFinales.get(1)), new ComparadorCartasPartidaPorPosCartaMazo());
-			Collections.sort(mazos.getSecond().get(listaMazosFinales.get(2)), new ComparadorCartasPartidaPorPosCartaMazo());
-			Collections.sort(mazos.getSecond().get(listaMazosFinales.get(3)), new ComparadorCartasPartidaPorPosCartaMazo());
 
-			model.put("mazoFinalCorazones",mazos.getSecond().get(listaMazosFinales.get(0)));
-			model.put("mazoFinalPicas",mazos.getSecond().get(listaMazosFinales.get(1)));	
-			model.put("mazoFinalDiamantes",mazos.getSecond().get(listaMazosFinales.get(2)));
-			model.put("mazoFinalTreboles",mazos.getSecond().get(listaMazosFinales.get(3)));
- 
+			}else{
+				Tuple3 mazos = cartasPartidaService.moverCartas(mazoOrigen, mazoDestino, cantidad, partidaId);
+				
+				if(cartasPartidaService.findCartasPartidaMazoInicialByPartidaId(partidaId)==null){
+					List<CartasPartida> mazoIni = new ArrayList<>();
+					model.put("mazInicial", mazoIni);
+				}else{
+					List<CartasPartida> mazoIni = cartasPartidaService.findCartasPartidaMazoInicialByPartidaId(partidaId);			
+					model.put("mazInicial", mazoIni);
+				}
+				//Map<Integer, List<CartasPartida>> mazosFinales = cartasPartidaService.moverCartas(mazoOrigen, mazoDestino, cantidad, partidaId).getSecond();
 			
-			//model.put("mazInicial", mazos.getThird().get(partidaId));
-			model.put("partidaId",partidaId);
-			return TABLERO;
+				model.put("mazInt1",mazos.getFirst().get(listaMazos.get(0)));
+				model.put("mazInt2",mazos.getFirst().get(listaMazos.get(1)));
+				model.put("mazInt3",mazos.getFirst().get(listaMazos.get(2)));
+				model.put("mazInt4",mazos.getFirst().get(listaMazos.get(3)));
+				model.put("mazInt5",mazos.getFirst().get(listaMazos.get(4)));
+				model.put("mazInt6",mazos.getFirst().get(listaMazos.get(5)));
+				model.put("mazInt7",mazos.getFirst().get(listaMazos.get(6)));
+
+				Collections.sort(mazos.getSecond().get(listaMazosFinales.get(0)), new ComparadorCartasPartidaPorPosCartaMazo());
+				Collections.sort(mazos.getSecond().get(listaMazosFinales.get(1)), new ComparadorCartasPartidaPorPosCartaMazo());
+				Collections.sort(mazos.getSecond().get(listaMazosFinales.get(2)), new ComparadorCartasPartidaPorPosCartaMazo());
+				Collections.sort(mazos.getSecond().get(listaMazosFinales.get(3)), new ComparadorCartasPartidaPorPosCartaMazo());
+
+				model.put("mazoFinalCorazones",mazos.getSecond().get(listaMazosFinales.get(0)));
+				model.put("mazoFinalPicas",mazos.getSecond().get(listaMazosFinales.get(1)));	
+				model.put("mazoFinalDiamantes",mazos.getSecond().get(listaMazosFinales.get(2)));
+				model.put("mazoFinalTreboles",mazos.getSecond().get(listaMazosFinales.get(3)));
+	
+				
+				//model.put("mazInicial", mazos.getThird().get(partidaId));
+				model.put("partidaId",partidaId);
+				return TABLERO;
+		}
 	
 		}
 	
